# CogStory

./: .gitignore  .ycm_extra_conf.py2  ApiDoc.txt  CMakeLists.txt  CogStory.code-workspace  DesignDoc.txt  Gameplay  Gameplay.txt  Story.odt  story.txt
Binaries/Win64/: game_settings.cog
Data/: editor_config.json
Data/__RAW/: city.tpproj  env_0.tpproj  env_1.tpproj  env_5.tpproj  env_7.tpproj  main_tileset.ase  menu_ui.tpproj  npc-1.tpproj  npc-2.tpproj  particles.tpproj  player.tpproj  scene_factory.tpproj  time_traveler.tpproj
Data/__RAW/0_home/: main_room.ase
Data/__RAW/1_factory/: 1_0_factory.tpproj  1_1_factory.tpproj  chair1.ase  factory_main.ase
Data/__RAW/2_city/: 2_2_city.tpproj  2_3_city.tpproj  city_main.ase  single_house.ase
Data/__RAW/actors/: player.ase
Data/__RAW/actors/npc/: npc-1.ase  npc.tpproj
Data/__RAW/env/: door-sign.ase  flower-pot.ase  tree1.ase  tree2.ase
Data/__RAW/scenes_common/: scenes_common.tpproj
Data/animations/: npc_1.anim  player.anim  scene_door.anim  time_traveler.anim
Data/gfx/0_home/: 0_0_home.pack
Data/gfx/actors/: player.pack  time_traveler.pack
Data/gfx/characters/: characters_ui.pack
Data/gfx/effects/: particles.pack
Data/gfx/env/: env_0.pack  env_1.pack  env_2.pack  env_5.pack
Data/gfx/scenes/: scenes_common.pack
Data/gfx/ui/: actors_ui.pack  menu_ui.pack
Data/scenes/: a  hello.scn
Data/scenes/0_home/: 0_0_home.scn  0_0_home_main.scn  0_home_main.scn
Data/scenes/1_factory/: 1_0_factory.scn  1_0_factory_hallway.scn  1_1_factory.scn  1_1_factory_main.scn  1_2_factory_cabinI.scn  1_2_factory_corridor.scn  1_3_factory_cabinI.scn  1_3_factory_cabinII.scn  1_4_factory_cabinII.scn  1_4_factory_cabinIII.scn  1_5_factory_cabinIII.scn  1_5_factory_corridor_job_office.scn  1_6_factory_corridor_job_office.scn  1_6_factory_job_office.scn  1_factory_cabinI.scn  1_factory_cabinII.scn  1_factory_cabinIII.scn  1_factory_corridor.scn  1_factory_corridor_job_office.scn  1_factory_hallway.scn  1_factory_job_office.scn  1_factory_main.scn
Data/scenes/2_city/: 2_0_city.scn  2_0_city_main.scn  2_1_city_robots_district.scn  2_1_city_robots_districtI.scn  2_2_city_humans_district.scn  2_2_city_robots_districtII.scn  2_3_city_factory_district.scn  2_3_city_humans_districtI.scn  2_4_city_forest_alley.scn  2_4_city_humans_districtII.scn  2_5_city_factory_district.scn  2_city_factory_district.scn  2_city_forest_alley.scn  2_city_humans_districtI.scn  2_city_humans_districtII.scn  2_city_main.scn  2_city_robots_districtI.scn  2_city_robots_districtII.scn
Data/scenes/4_forest/: 4_0_forest_I.scn  4_forest_I.scn
Data/scenes/special/: 0_intro.scn
Data/scripts/: Common.script  Master.script
Data/scripts/0_home/: 0_0_home.script  0_0_home_main.script  0_0_home_tile.script
Data/scripts/1_factory/: 1_0_factory.script  1_0_factory_hallway.script  1_1_factory.script  1_1_factory_main.script  1_2_factory_cabinI.script  1_4_factory_cabinIII.script  1_factory_cabinIII.script  1_factory_main.script
Data/scripts/2_city/: 2_0_city.script  2_0_city_main.script  2_1_city_robots_district.script  2_3_city_factory_district.script  2_city_factory_district.script  2_city_main.script
Data/scripts/special/: 0_intro.script
Data/texts/: menu.csv
Projects/: RobotTales.sln
Projects/GWork/: GWork.vcxproj  GWork.vcxproj.filters
Projects/RobotTales/: RobotTales.vcxproj  RobotTales.vcxproj.filters
Projects/angelscript/: angelscript.vcxproj  angelscript.vcxproj.filters
Sources/: Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  Animable.cpp  Animable.h  Animation.cpp  Animation.h  Atlas.cpp  Atlas.h  AtlasManager.cpp  AtlasManager.h  AudioManager.cpp  AudioManager.h  AudioSample.cpp  AudioSample.h  AudioStream.cpp  AudioStream.h  Camera.cpp  Camera.h  Collidable.cpp  Collidable.h  Collidalble.cpp  Common.cpp  Common.h  Component.cpp  Component.h  Editor.cpp  Editor.h  Entity.cpp  Entity.h  Font.cpp  Font.h  GameMain.cpp  Lifecycle.h  MainLoop.cpp  MainLoop.h  ParticleEmitter.cpp  ParticleEmitter.h  PhysicsManager.cpp  (+40 more)
Sources/actors/: EnemyActor.cpp  EnemyActor.h  NPCActor.cpp  NPCActor.h  TileActor.cpp  TileActor.h
Sources/actors/components/: AnimPresetComponent.cpp  AnimPresetComponent.h  AudioSampleComponent.cpp  AudioSampleComponent.h  Component.h  MovementComponent.cpp  MovementComponent.h  ParticleEmitterComponent.cpp  ParticleEmitterComponent.h
Sources/addons/file-watcher/: FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherLinux.h  FileWatcherOSX.cpp  FileWatcherWin32.cpp
Sources/addons/nine-patch/: nine_patch.c
Sources/addons/triangulator/: Triangulator.cpp  Triangulator.h
Sources/addons/tweeny/: tweeny.h
Sources/editor/: Editor.cpp  Editor.h  EditorActorMode.cpp  EditorActorMode.h  EditorActorWindow.cpp  EditorActorWindow.h  EditorAnimationWindow.cpp  EditorAnimationWindow.h  EditorComponentWindow.cpp  EditorComponentWindow.h  EditorFlagPointMode.cpp  EditorFlagPointMode.h  EditorFlagPointWindow.cpp  EditorFlagPointWindow.h  EditorFrame.cpp  EditorFrame.h  EditorOpenSceneWindow.cpp  EditorOpenSceneWindow.h  EditorPhysMode.cpp  EditorPhysMode.h  EditorSaveSceneWindow.cpp  EditorSaveSceneWindow.h  EditorSceneWindow.cpp  EditorSceneWindow.cpp~  EditorSceneWindow.h  EditorScriptSelectWindow.cpp  EditorScriptSelectWindow.h  EditorScriptWindow.cpp  EditorScriptWindow.h  EditorSpeechMode.cpp  EditorSpeechMode.h  EditorSpeechWindow.cpp  EditorSpeechWindow.h  EditorTileMode.cpp  EditorTileMode.h  EditorTilesWindow.cpp  EditorTilesWindow.h  EditorTriggerAreaMode.cpp  EditorTriggerAreaMode.h  EditorTriggerAreaWindow.cpp  (+5 more)
Sources/editor/ui/: Button.cpp  Button.h  ButtonImage.cpp  ButtonImage.h  Frame.cpp  Frame.h  Image.cpp  Image.h  Label.cpp  Label.h  Menu.cpp  Menu.h  TextBox.h  UIManager.cpp  UIManager.h  Widget.cpp  Widget.h
Sources/states/: EditorState.cpp  EditorState.h  GamePlayState.cpp  GamePlayState.h  MainMenuState.cpp  MainMenuState.h
Tools/TexturePacker/: launcher.bat
__old/ui/: ButtonImage.h  Frame.h  Label.cpp  Label.h  TextBox.cpp  Widget.h
anglescript_2.31.2/angelscript/source/: as_string_util.cpp
(+16 files in other folders)
